complete Delete button function

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 CONNECTIONSTRING=mongodb+srv://majid:IACDb3qlNwkuWDM1@cluster0.t3ufohj.mongodb.net/OurApp?retryWrites=true&w=majority
 PORT=3000
+
+#mongodb+srv://majid:IACDb3qlNwkuWDM1@cluster0.t3ufohj.mongodb.net/test
