--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "marked": "^0.6.2",
     "md5": "^2.3.0",
     "mongodb": "^3.7.3",
     "nodemon": "^2.0.20",
+    "sanitize-html": "^1.20.1",
     "validator": "^13.7.0"
   }
 }
