--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon db",
+    "watch": "start nodemon db --ignore frontend-js --ignore public/ && start webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "majid",
   "license": "ISC",
   "keywords": [],
-  "description": "",
   "dependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "axios": "^0.19.0",
+    "babel-loader": "^9.1.2",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^7.6.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "connect-mongodb-session": "^3.1.1",
+    "dompurify": "^3.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -24,6 +29,17 @@
     "mongodb": "^3.7.3",
     "nodemon": "^2.0.20",
     "sanitize-html": "^1.20.1",
-    "validator": "^13.7.0"
-  }
+    "validator": "^13.7.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/majidali137/complex-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/majidali137/complex-app/issues"
+  },
+  "homepage": "https://github.com/majidali137/complex-app#readme",
+  "description": ""
 }
