--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^3.7.3",
     "nodemon": "^2.0.20",
     "sanitize-html": "^1.20.1",
+    "socket.io": "^2.2.0",
     "validator": "^13.7.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
