Complete Complex app

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 CONNECTIONSTRING=mongodb+srv://majid:IACDb3qlNwkuWDM1@cluster0.t3ufohj.mongodb.net/OurApp?retryWrites=true&w=majority
 PORT=3000
-
-#mongodb+srv://majid:IACDb3qlNwkuWDM1@cluster0.t3ufohj.mongodb.net/test
+JWTSECRET=my1super2secr3et4phr5ase
