--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dompurify": "^3.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "marked": "^0.6.2",
     "md5": "^2.3.0",
     "mongodb": "^3.7.3",
